messy, but solved part 6 day 2